Menu padding fix so home doesn't move behind the logo.

--- a/app/assets/stylesheets/menu.css.scss
+++ b/app/assets/stylesheets/menu.css.scss
@@ -22,7 +22,7 @@ header {
 #navbar-kronos ul.navbar-nav {
 	width:100%;
 	border:0;
-	padding:0;
+	padding:0 0 0 80px;
 }
 
 #navbar-kronos .navbar-toggle .icon-bar {
